--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/estilos.css" />
 </head>
 <body>
+    <div id="cabecera">
+        <h1>CABECERA</h1>
+    </div>
     <article>
         <h1>Es un blog post</h1>
         <p>Parrafo de inicio</p>
