--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <title>Titulo del post</title>
     <link rel="stylesheet" href="css/estilos.css" />
 </head>
-<body>
+<body id="container">
     <div id="cabecera">
         <h1>CABECERA</h1>
     </div>
