Agregado parrafo dos

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,8 @@
     <article>
         <h1>Es un blog post</h1>
         <p>Parrafo de inicio</p>
+        <br />
+        <p>Parrafo de en medio</p>
     </article>
 </body>
 </html>
